--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -11,5 +11,16 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: 3.x  # Choose the Python version you need
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install beautifulsoup4
+
     - name: Run STEP2.py
       run: python STEP2.py
+
