--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install beautifulsoup4
+        pip install requests
 
     - name: Run STEP2.py
       run: python STEP2.py
