--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -16,6 +16,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install beautifulsoup4
         pip install requests
+        pip install lxml
 
     - name: Run STEP1.py
       run: python STEP1.py
