--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,4 +1,4 @@
-name: Step 1
+name: RUN EMAILSCRAPER
 
 on:
   workflow_dispatch:
@@ -18,5 +18,5 @@ jobs:
         pip install requests
         pip install lxml
 
-    - name: Run STEP1.py
-      run: python STEP1.py
+    - name: Run EmailScraper.py
+      run: python EmailScraper.py
