--- a/.github/workflows/sender.yml
+++ b/.github/workflows/sender.yml
@@ -11,5 +11,5 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Run EMAILSENDER.py
-      run: python EMAILSENDER.py
+    - name: Run EmailSender.py
+      run: python EmailSender.py
